# opencl_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
kernels/: image_processing.cl
module/: GpuCompute.cppm
